# fluent-reader

./: .gitignore  DIGEST_AI_ONLY.md  OLLAMA_TIMEOUT_FIX.md  STARTUP_ARTICLES_FIX.md  package-lock.json  package.json  test-translate-main.html  test-translate.html  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml  release-main.yml  windows-build.yml
.qwen/: settings.json  settings.json.orig
src/: electron.ts  index.html  index.tsx  preload.ts  schema-types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/bridges/: settings.ts  tauri-settings.ts  utils.ts
src/components/: article.tsx  context-menu.tsx  log-menu.tsx  menu.tsx  nav.tsx  rating-menu.tsx  root.tsx  settings.tsx
src/components/cards/: compact-card.tsx  default-card.tsx  info.tsx  list-card.tsx  magazine-card.tsx  rating-badge.tsx  rating-footer.tsx
src/components/feeds/: cards-feed.tsx  feed.tsx  list-feed.tsx
src/components/settings/: app.tsx  (+18 more)
src/containers/: article-container.tsx  feed-container.tsx  menu-container.tsx  nav-container.tsx  settings-container.tsx
src/main/: polyfills.ts  settings.ts  utils.ts  window.ts
src/scripts/: automation-service.ts  db.ts  digest-service.ts  embedding-queue.ts  embeddings.ts  exporter.ts  highlights-db.ts  init-settings.ts  integrations.ts  local-summary.ts  oauth-service.ts  push-service.ts  rating-service-rules.ts  rating-service.ts  ratings-db.ts  rules-engine.ts  semantic-search.ts  settings.ts  summary.ts  tauri-bridge.ts  translate.ts  tray-manager.ts  utils.ts  vector-db.ts
src/services/: googleTranslate.js
(+50 files in other folders)
