[package]
name = "fluent-reader"
version = "1.1.4"
description = "Modern desktop RSS reader"
authors = ["Haoyuan Liu"]
license = "BSD-3-Clause"
repository = "https://github.com/kencarli/fluent-reader"
edition = "2021"
rust-version = "1.70"

[dependencies]
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "gzip", "brotli", "cookies"] }
quick-xml = { version = "0.31", features = ["serialize"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
urlencoding = "2.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
